Update shadow plugin, update minimum required Java to 21, exclude more unused XSeries classes, update test server script tool, update updater messages, fix PlaceholderAPI being detected when it should not be, fix message not being cached correctly if there is more than 1 message place with the same message before, update arrow items